# DPRecomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deadlyprem_config.toml  deadlyprem_manifest.toml
docs/: gpu-rainbow-noise.md
scripts/: build.py
src/: deadlyprem_app.h  deadlyprem_fp_guard.h  deadlyprem_hooks.cpp  main.cpp
